Add author information to notebook

--- a/notebooks/resnet_plant_disease_classification.ipynb
+++ b/notebooks/resnet_plant_disease_classification.ipynb
@@ -8,6 +8,9 @@
       "source": [
         "# Evaluating Pre-trained ResNet50V2 for Plant Disease Classification\n",
         "\n",
+        "**Author:** Kristi Flowers  \n",
+        "**GitHub:** [github.com/KRFlowers](https://github.com/KRFlowers)  \n",
+        "**Date:** December 2025\n",
         "\n",
         " This project evaluates the effectiveness of transfer learning for multi-class image classification using convolutional neural networks. The ResNet50V2 architecture pretrained on ImageNet is implemented and compared against custom CNN baselines. The goal is to quantify how much pretrained models improve image classification performance relative to traditional CNN architectures.\n",
         "\n",
