Standardize notebook structure

--- a/notebooks/resnet_plant_disease_classification.ipynb
+++ b/notebooks/resnet_plant_disease_classification.ipynb
@@ -61,27 +61,27 @@
         "id": "YmBQ-W55Jyuw"
       },
       "source": [
-        "## #1. Configure Environment"
+        "## 1. Configure Environment"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "apbogsWrJyuw"
-      },
+      "metadata": {},
       "source": [
-        "### 1.1 Install Packages"
+        "### 1.1 Install Packages (Google Colab)\n",
+        "Keras Tuner is required for this notebook and may need to be installed if using Colab. Skip this cell if running locally with requirements.txt."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "SK6IHJ7xXXe0"
       },
       "outputs": [],
       "source": [
-        "!pip install -q keras-tuner"
+        "!pip install -q keras-tuner\n",
+        "print(\"Packages installed\")"
       ]
     },
     {
@@ -168,11 +168,41 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1.3 Set Configuration Options"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Display settings for DataFrames\n",
+        "pd.set_option('display.max_columns', None)\n",
+        "pd.set_option('display.float_format', '{:.4f}'.format)\n",
+        "\n",
+        "# Visualization settings\n",
+        "sns.set_palette('husl')\n",
+        "%matplotlib inline\n",
+        "\n",
+        "# Random seeds for reproducibility (CRITICAL for ML)\n",
+        "RANDOM_STATE = 42\n",
+        "np.random.seed(RANDOM_STATE)\n",
+        "tf.random.set_seed(RANDOM_STATE)\n",
+        "\n",
+        "print(\"Configuration options set\")\n",
+        "print(f\"  Random seed: {RANDOM_STATE} (ensures reproducible results)\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "1qYw1pXftD_9"
       },
       "source": [
-        "###1.3 Define Helper Functions"
+        "### 1.4 Define Helper Functions"
       ]
     },
     {
@@ -266,7 +296,7 @@
         "id": "_qxD1zTyJyux"
       },
       "source": [
-        "## #2. Load Data\n",
+        "## 2. Load Data\n",
         "Load the dataset from Google Drive."
       ]
     },
@@ -576,7 +606,7 @@
         "id": "VgNLQlvpW7yt"
       },
       "source": [
-        "## #3. Explore Data\n",
+        "## 3. Explore Data\n",
         "\n",
         "Display sample images. Verify correct loading. Analyze class distribution to check for class imbalance."
       ]
@@ -750,7 +780,7 @@
         "id": "Ix7LTgTHU-En"
       },
       "source": [
-        "## #4. Develop Models\n",
+        "## 4. Develop Models\n",
         "\n",
         "Build 3 CNN models: minimal CNN to establish baseline performance, improved CNN with architecture tuning, and ResNet50V2 with transfer learning. Final model parameters will be optimized through Bayesian hyperparameter tuning."
       ]
@@ -2112,7 +2142,7 @@
         "id": "Vwt4-byQJyu3"
       },
       "source": [
-        "## #5. Evaluate Results\n",
+        "## 5. Evaluate Results\n",
         "Compare final performance across all three models."
       ]
     },
